--- a/packages/material-ui-utils/package.json
+++ b/packages/material-ui-utils/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.4",
+    "@material-ui/core": "^4.11.0",
     "@types/prop-types": "^15.7.3",
     "@types/react-is": "^16.7.1",
     "prop-types": "^15.7.2",
